syntax = "proto3";

package ru.alexgur.grpc;

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

option java_multiple_files = true;
option java_package = "ru.alexgur.grpc.user";

message UserRequest {
  int32 id = 1;
}

message UserResponse {
  int32 id = 1;
  string name = 2;
  string email = 3;
  google.protobuf.Timestamp created_on = 4;
}

service UserService {
    rpc SendUserRequest(UserRequest) returns (UserResponse);
}

service UserController {
  rpc GetUser (UserRequest) returns (UserResponse);
  // если нужно вернуть void, то - returns (google.protobuf.Empty);
}